--- a/src/main/resources/window.fxml
+++ b/src/main/resources/window.fxml
@@ -33,7 +33,7 @@
          <children>
             <Label fx:id="userName" alignment="CENTER" contentDisplay="CENTER" layoutX="450.0" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #6B3BA6;" text="用户" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" />
          </children></Pane>
-      <Pane layoutX="100.0" layoutY="50.0" prefHeight="350.0" prefWidth="550.0" style="-fx-background-color: #6495ED;">
+      <Pane fx:id="chatWindow" layoutX="100.0" layoutY="50.0" prefHeight="350.0" prefWidth="550.0" style="-fx-background-color: #6495ED;">
          <children>
             <SplitPane dividerPositions="0.29744525547445255" prefHeight="350.0" prefWidth="550.0">
               <items>
