--- a/src/main/resources/window.fxml
+++ b/src/main/resources/window.fxml
@@ -18,7 +18,7 @@
       <Pane id="leftMenu" prefHeight="400.0" prefWidth="100.0" style="-fx-background-color: #A895BF;">
          <children>
 <!--            <Label fx:id="massge" alignment="CENTER" contentDisplay="CENTER" layoutY="50.0" onMouseClicked="#showMassgeList" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #B2FFAE;" text="消息" textAlignment="CENTER" textFill="#0061ab" textOverrun="CLIP" wrapText="true" />-->
-            <Label fx:id="mailList" alignment="CENTER" contentDisplay="CENTER" layoutY="50.0" onMouseClicked="#showOrHideList" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #FFFEAE;" text="通讯录" textAlignment="CENTER" textFill="#0059b9" textOverrun="CLIP" wrapText="true" />
+            <Label fx:id="mailList" alignment="CENTER" contentDisplay="CENTER" layoutY="50.0" onMouseClicked="#showOrHideList" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: #7D85E7;" text="通讯录" textAlignment="CENTER" textFill="#ffffff" textOverrun="CLIP" wrapText="true" />
             <VBox fx:id="modelBox" alignment="CENTER" layoutY="100.0" prefHeight="100.0" prefWidth="100.0" visible="false">
                <children>
                   <Label fx:id="myFriend" alignment="CENTER" onMouseClicked="#showMyUser" prefHeight="25.0" prefWidth="100.0" text="我的好友" textFill="WHITE" />
@@ -41,7 +41,7 @@
                      <children>
                         <ScrollPane maxHeight="350.0" maxWidth="150.0" minHeight="350.0" minWidth="150.0" prefHeight="350.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <content>
-                              <GridPane fx:id="userList" prefWidth="148.0" style="-fx-background-color: #00CC00;">
+                              <GridPane fx:id="userList" prefWidth="135.0" style="-fx-background-color: #00CC00;">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" />
                                 </columnConstraints>
