--- a/src/main/resources/window.fxml
+++ b/src/main/resources/window.fxml
@@ -35,52 +35,58 @@
          </children></Pane>
       <Pane layoutX="100.0" layoutY="50.0" prefHeight="350.0" prefWidth="550.0" style="-fx-background-color: #6495ED;">
          <children>
-            <SplitPane dividerPositions="0.29744525547445255" prefHeight="350.0" prefWidth="550.0">
-              <items>
-                <AnchorPane maxHeight="350.0" maxWidth="150.0" minHeight="350.0" minWidth="150.0" prefHeight="350.0" prefWidth="150.0">
-                     <children>
-                        <ScrollPane maxHeight="350.0" maxWidth="150.0" minHeight="350.0" minWidth="150.0" prefHeight="350.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <content>
-                              <GridPane fx:id="userList" prefWidth="135.0" style="-fx-background-color: #00CC00;">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" />
-                                </columnConstraints>
-                              </GridPane>
-                           </content>
-                        </ScrollPane>
-                     </children></AnchorPane>
-                <AnchorPane prefHeight="350.0" prefWidth="339.0">
-                     <children>
-                        <GridPane layoutX="110.0" layoutY="85.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="200.0" minHeight="200.0" prefHeight="200.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <AnchorPane fx:id="inputAndSend" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFF9D2;" visible="false" GridPane.rowIndex="2">
-                                 <children>
-                                    <TextArea fx:id="inputText" layoutY="19.0" prefHeight="100.0" prefWidth="186.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0" />
-                                    <Button layoutX="273.0" layoutY="39.0" mnemonicParsing="false" onAction="#sendMassge" prefWidth="80.0" text="发送" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children></AnchorPane>
-                              <AnchorPane fx:id="chatModel" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-                                 <children>
-                                      <ListView fx:id="chatRecord" prefWidth="395.0"  prefHeight="200" style="-fx-background-color: #F6D4FF;">
-                                      </ListView>
-                                 </children></AnchorPane>
-                              <AnchorPane prefHeight="50.0" style="-fx-background-color: #DCFFAE;">
-                                 <children>
-                                    <Pane fx:id="chatUserTop" layoutX="76.0" layoutY="18.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                 </children></AnchorPane>
-                           </children>
-                        </GridPane>
-                     </children>
+            <AnchorPane prefHeight="350.0" prefWidth="550.0">
+               <children>
+   <!--              <items>-->
+                   <AnchorPane maxHeight="350.0" maxWidth="150.0" minHeight="350.0" minWidth="150.0" prefHeight="350.0" prefWidth="150.0">
+                        <children>
+                           <ScrollPane maxHeight="350.0" maxWidth="150.0" minHeight="350.0" minWidth="150.0" prefHeight="350.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <content>
+                                 <GridPane fx:id="userList" prefWidth="135.0" style="-fx-background-color: #00CC00;">
+                                   <columnConstraints>
+                                     <ColumnConstraints hgrow="SOMETIMES" />
+                                   </columnConstraints>
+                                 </GridPane>
+                              </content>
+                           </ScrollPane>
+                        </children>
                   </AnchorPane>
-              </items>
-            </SplitPane>
+                   <AnchorPane layoutX="150" prefHeight="350.0" prefWidth="339.0">
+                        <children>
+                           <GridPane layoutX="110.0" layoutY="85.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                             <columnConstraints>
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="400.0" prefWidth="400.0" />
+                             </columnConstraints>
+                             <rowConstraints>
+                               <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                               <RowConstraints maxHeight="200.0" minHeight="200.0" prefHeight="200.0" vgrow="SOMETIMES" />
+                               <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                             </rowConstraints>
+                              <children>
+                                 <AnchorPane fx:id="inputAndSend" prefHeight="200.0" prefWidth="339.0" style="-fx-background-color: #FFF9D2;" visible="false" GridPane.rowIndex="2">
+                                    <children>
+                                       <TextArea fx:id="inputText" prefHeight="100.0" prefWidth="259.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0" />
+                                       <Button layoutX="259.0" mnemonicParsing="false" onAction="#sendMassge" prefWidth="80.0" text="发送" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    </children>
+                              </AnchorPane>
+                                 <AnchorPane fx:id="chatModel" prefHeight="200.0" prefWidth="400.0" GridPane.rowIndex="1">
+                                    <children>
+                                         <ListView fx:id="chatRecord" prefHeight="200" prefWidth="400.0" style="-fx-background-color: #F6D4FF;">
+                                      </ListView>
+                                    </children>
+                              </AnchorPane>
+                                 <AnchorPane prefHeight="50.0" prefWidth="395.0" style="-fx-background-color: #DCFFAE;">
+                                    <children>
+                                       <Pane fx:id="chatUserTop" prefHeight="50.0" prefWidth="395.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-56.0" AnchorPane.topAnchor="0.0" />
+                                    </children>
+                              </AnchorPane>
+                              </children>
+                           </GridPane>
+                        </children>
+                     </AnchorPane>
+               </children>
+<!--              </items>-->
+            </AnchorPane>
          </children></Pane>
    </children>
 </Pane>
