--- a/src/main/resources/success.fxml
+++ b/src/main/resources/success.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.JFXButton?>
 <AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.SuccessController">
    <children>
       <Label alignment="CENTER" layoutX="25.0" layoutY="20.0" prefHeight="100.0" prefWidth="250.0" text="操作成功!" textFill="#0075ff">
@@ -15,6 +13,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="100.0" layoutY="134.0" onMouseClicked="#hideModel" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="确定" />
+      <JFXButton buttonType="RAISED" styleClass="normal_button" layoutX="100.0" layoutY="134.0" onMouseClicked="#hideModel" prefHeight="40.0" prefWidth="100.0" text="确定" />
    </children>
 </AnchorPane>
