--- a/src/main/resources/window.fxml
+++ b/src/main/resources/window.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.TextArea?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.WindowController">
    <children>
       <Pane id="leftMenu" prefHeight="400.0" prefWidth="100.0" style="-fx-background-color: #A895BF;">
@@ -66,7 +67,7 @@
                                  <AnchorPane fx:id="inputAndSend" prefHeight="200.0" prefWidth="339.0" style="-fx-background-color: #FFF9D2;" visible="false" GridPane.rowIndex="2">
                                     <children>
                                        <TextArea fx:id="inputText" prefHeight="100.0" prefWidth="259.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="0.0" />
-                                       <Button layoutX="259.0" mnemonicParsing="false" onAction="#sendMassge" prefWidth="80.0" text="发送" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       <JFXButton buttonType="RAISED" styleClass="normal_button" layoutX="259.0" mnemonicParsing="false" onAction="#sendMassge" prefWidth="80.0" text="发送" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                     </children>
                               </AnchorPane>
                                  <AnchorPane fx:id="chatModel" prefHeight="200.0" prefWidth="400.0" GridPane.rowIndex="1">
