--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -12,7 +12,7 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <Pane fx:id="loginModel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
     <children>
-        <JFXTextField fx:id="account" promptText="手机号" layoutX="50.0" layoutY="63.0" prefHeight="30.0" prefWidth="200.0" />
+        <JFXTextField fx:id="account" promptText="用户名 " layoutX="50.0" layoutY="63.0" prefHeight="30.0" prefWidth="200.0" />
         <JFXButton fx:id="register" layoutX="57.0" buttonType="RAISED" layoutY="219.0" mnemonicParsing="false" onAction="#register" prefHeight="30.0" prefWidth="74.0" styleClass="defult_button" text="注册" />
         <JFXButton fx:id="login" layoutX="165.0" buttonType="RAISED" layoutY="219.0" mnemonicParsing="false" onAction="#login" prefHeight="30.0" prefWidth="74.0" styleClass="normal_button" text="登录" />
         <JFXPasswordField promptText="密码" fx:id="password" layoutX="50" layoutY="142.0" prefHeight="30.0" prefWidth="200.0" />
